# ATS-Postiats-contrib

./: .gitignore  .travis.yml  AUTHORS  LICENSE  Makefile  Makefile_test  README.md
contrib/: Makefile  Makefile_test  libats-hwxi
contrib/APUE/: basics.sats
document/: Makefile  Makefile_test
projects/: Makefile  Makefile_test
projects/SMALL/GameOf24/: CMakeLists.txt  GameOf24.dats  GameOf24.sats  GameOf24_card.dats  GameOf24_solve.dats  Makefile  Makefile_build  README
projects/SMALL/GameOf24/Clojure/: GameOf24_clj.dats  GameOf24_clj.sats  Makefile
projects/SMALL/GameOf24/Java/: GameOf24.dats  Makefile
projects/SMALL/GameOf24/JavaScript/: GameOf24_js.dats  GameOf24_js.sats  Makefile  mytest.js
projects/SMALL/GameOf24/JavaScript/WEBDEMO/: Makefile  inputform.html  libatscc2js
projects/SMALL/GameOf24/JavaScript/WEBDEMO/DATS_JS/: GameOf24_js_dats.js
projects/SMALL/GameOf24/PHP/: GameOf24_php.dats  GameOf24_php.sats  Makefile  mytest.php
projects/SMALL/GameOf24/PHP/DEMO/: inputform_process.php
projects/SMALL/GameOf24/PHP/WEBDEMO/: Makefile  inputform.html  inputform_process.php
projects/SMALL/GameOf24/PHP/WEBDEMO/DATS_PHP/: GameOf24_php_dats.php
projects/SMALL/GameOf24/Perl/: GameOf24_pl.dats  GameOf24_pl.sats  Makefile
projects/SMALL/GameOf24/Python/: GameOf24_py.dats  GameOf24_py.sats  Makefile
projects/SMALL/GameOf24/Python3/: GameOf24_py.dats  GameOf24_py.sats  Makefile
projects/SMALL/GameOf24/Scheme/: GameOf24_scm.dats  GameOf24_scm.sats  Makefile
projects/SMALL/GameOf24/src/: GameOf24.sats  GameOf24_cardset.dats  GameOf24_mylib.dats
(+3354 files in other folders)
